hello-world/06x-hello-world/greeter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
