hello-world/06x-hello-world/greeter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeter
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: greeter
              servicePort: http
